2000-09-19  Lars Wirzenius  <liw@iki.fi>

	* gwlib/list.[ch]: Removed list_cat function, as it is now unused.

2000-09-19  Tuomas Luttinen  <tuo@wapit.com>

	* gw/wml_compiler.c: Added wml_init and wml_shutdown that do nothing
	yet, removed call to list_cat.

	* gw/wml_compiler.h: Added prototypes for wml_init and wml_shutdown.

2000-09-18  Richard Braakman  <dark@wapit.com>

	* gw/smsc_smpp.c: Make charset_iso_to_smpp and charset_smpp_to_iso
	work with character values > 128.  Bugfix suggested by
	Philip Chr. Psiloinis.

2000-09-18  Lars Wirzenius  <liw@iki.fi>

	* doc/CodingStyle: Added example of coding style.

2000-09-18  Lars Wirzenius  <liw@iki.fi>

	* ChangeLog, debian/init, gw/bb_boxc.c, gw/bb_http.c, gw/html.h,
	gw/msg.c, gw/urltrans.c, gwlib/conffile.c, gwlib/conffile.h,
	gwlib/gwassert.h, gwlib/gwstr.h, gwlib/gwthread-pthread.c,
	gwlib/http.c, gwlib/http.h, gwlib/list.c, gwlib/list.h,
	gwlib/log.h, gwlib/octstr.c, gwlib/octstr.h, gwlib/socket.c,
	gwlib/thread.c, gwlib/thread.h, gwlib/utils.c: Folded some long
	lines (see utils/find-long-lines).


2000-09-18  Lars Wirzenius  <liw@iki.fi>

	* gwlib/octstr.c: Shut up char/unsigned char implicit conversion
	warning by adding a cast.

2000-09-18  Derry Hamilton  <rasilon@tardis.ed.ac.uk>

	* gwlib/thread.h: changed the call to mutex_init_static_real
	to actually pass the mutex when MUTEX_STATS are required.

2000-09-18  Kalle Marjola  <rpr@wapit.com>

	* gwlib/utils.c (get_and_set_debugs): PANIC if unknown option is
	encountered, to avoid misuse of options.

2000-09-18  Kalle Marjola  <rpr@wapit.com>

	* gw/bb_http.c (httpd_serve): when receiving an unknown command,
	tells the received url back to caller

2000-09-18  Kalle Marjola  <rpr@wapit.com>

	* gw/smsbox.c (init_smsbox): fixed bug reported by Paul Keogh.

	* gw/bearerbox.c: some fix to shutdown order

2000-09-14  Lars Wirzenius  <liw@iki.fi>

	* utils/source-stats: Wrote.

2000-09-14  Lars Wirzenius  <liw@iki.fi>
